updated logo location

--- a/COVID_Fontend_files/front-end/main.css
+++ b/COVID_Fontend_files/front-end/main.css
@@ -48,11 +48,12 @@
     height: 60px;
     padding: 20px 0;
     font-size: 13px;
-    padding-bottom: 50px;
+    padding-bottom: 70px;
   }
   
-  .main-nav .logo {
+  .logo {
     width: 110px;
+    padding-top: 20px;
   }
   
   .main-nav ul {
