--- a/COVID_Fontend_files/front-end/main.css
+++ b/COVID_Fontend_files/front-end/main.css
@@ -11,12 +11,13 @@
     padding: var(--spacing-unit-small);
     color:var(--button-color);
     text-decoration:none ;
-    transform: translateY(-100%);   
+    transform: translateY(-100%);
  }
  .skip-nav:focus{
      transform: none;
  }
-  
+
+
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: #f5f5ce;
@@ -24,22 +25,22 @@
     font-size: 15px;
     line-height: 1.5;
   }
-  
+
   a {
     color: #262626;
     text-decoration: none;
   }
-  
+
   ul {
     list-style: none;
   }
-  
+
   .container {
     width: 90%;
     max-width: 1100px;
     margin: auto;
   }
-  
+
   /* Nav */
   .main-nav {
     display: flex;
@@ -50,33 +51,44 @@
     font-size: 13px;
     padding-bottom: 70px;
   }
-  
+
   .logo {
     width: 110px;
     padding-top: 20px;
   }
-  
+
   .main-nav ul {
     display: flex;
   }
-  
+
   .main-nav ul li {
     padding: 0 10px;
   }
-  
+
   .main-nav ul li a {
     padding-bottom: 2px;
   }
-  
+
   .main-nav ul li a:hover {
     border-bottom: 2px solid #262626;
   }
-  
+
   .main-nav ul.main-menu {
     flex: 1;
     margin-left: 20px;
   }
-  
+
+  /* Style the search box inside the navigation bar */
+ .right-menu input[type=text] {
+   float: right;
+   padding: 5px;
+   border: none;
+   margin-top: -5px;
+   margin-left: 5px;
+   margin-right: 16px;
+   font-size: 17px;
+ }
+
   .menu-btn {
     cursor: pointer;
     position: absolute;
@@ -85,7 +97,7 @@
     z-index: 2;
     display: none;
   }
-  
+
   .btn {
     cursor: pointer;
     display: inline-block;
@@ -96,11 +108,11 @@
     color: #fff;
     font-size: 15px;;
   }
-  
+
   .btn:hover {
     opacity: 0.9;
   }
- 
+
   /* map */
   .map {
     width: 100%;
@@ -114,15 +126,15 @@
     padding-bottom: 50px;
     margin-bottom: 20px;
   }
-  
+
   .map h2, .map p {
     margin-bottom: 10px;
   }
-  
+
   .map .btn {
     margin-top: 20px;
   }
-  
+
   /* covid */
   .covid {
     display: grid;
@@ -131,16 +143,16 @@
     margin-bottom: 20px;
     background-color: #f1d9f8;
   }
-  
+
   .covid img {
     width: 100%;
     margin-bottom: 20px;
   }
-  
+
   .covid h3 {
     margin-bottom: 5px;
   }
-  
+
   footer{
     height: 50px;
     display: flex;
@@ -148,4 +160,3 @@
     background-color:#0099FF;
     padding: 40px;
 }
-  
