--- a/COVID_Fontend_files/front-end/main.css
+++ b/COVID_Fontend_files/front-end/main.css
@@ -3,6 +3,22 @@
   margin: 0;
   padding: 0;
 }
+
+
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: #ffffff;
+  color: #000;
+  font-size: 15px;
+  line-height: 1.5;
+}
+
+.container {
+  width: 90%;
+  max-width: 1500px;
+  margin: auto;
+}
+
 .skip-nav{
 
   position: absolute;
@@ -17,45 +33,6 @@
    transform: none;
 }
 
-
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: #ffffff;
-  color: #000;
-  font-size: 15px;
-  line-height: 1.5;
-}
-
-a {
-  color: #262626;
-  text-decoration: none;
-}
-
-ul {
-  list-style: none;
-}
-
-.container {
-  width: 90%;
-  max-width: 1500px;
-  margin: auto;
-}
-
-/* Nav */
-.main-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 60px;
-  padding: 20px 0;
-  font-size: 13px;
-  padding-bottom: 70px;
-}
-
- /*.logo {
-  width: 110px;
-  padding-top: 20px;
-} */
 /*-------------------------------------------------------*/
 .toplogo {
   padding-left: 20px;
@@ -96,10 +73,20 @@ form.Zip::after {
   clear: both;
   display: table;
 }
+/**************************************************************************/
 
-/*--------------------------------------------------------*/
 
 /* Style the search box inside the navigation bar */
+/* Nav */
+.main-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 60px;
+  padding: 20px 0;
+  font-size: 13px;
+  padding-bottom: 70px;
+}
 
 .main-nav ul {
   display: flex;
@@ -183,14 +170,36 @@ form.Zip::after {
 .covid h3 {
   margin-bottom: 5px;
 }
+/*----------------------------------------------------------------*/
 
-
-footer{
-  height: 20px;
-  display: flex;
-  justify-content: center;
+ .foot {
   background-color: #333;
-  color: white;
-  padding: 40px;
-  
+  overflow: hidden;
 }
+
+/* Style the links inside the navigation bar */
+.foot a {
+  float: right;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+/*copyright layout*/
+.foot p{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 14px 16px;
+  font-size: 17px;
+
+}
+
+/* Change the color of links on hover */
+.foot a:hover {
+  background-color: rgb(165, 162, 162);
+
+}
+
