--- a/COVID_Fontend_files/front-end/main.css
+++ b/COVID_Fontend_files/front-end/main.css
@@ -7,7 +7,6 @@
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: #ffffff;
   color: #000;
   font-size: 15px;
   line-height: 1.5;
@@ -18,9 +17,8 @@ body {
   max-width: 1500px;
   margin: auto;
 }
-/*Css for skip for Accessibility*/
-.skip-nav{
 
+.skip-nav{
   position: absolute;
   top: 0;
   left: 0;
@@ -35,37 +33,20 @@ body {
 
 /*-------------------------------------------------------*/
 .toplogo {
-  padding-left: 20px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin-top: 20px;
-  margin-bottom: 20px;
+  width: 100%;
+  display: inline-block;
   background-color:  #ffffff;
-  grid-gap: 550px;
 }
-/*clock*/
-#clock {
-  color: #000000;
-  font-size: 17px;
-  display:flex;
-  align-items: right;
-  float: right;
-  padding-right: 75px;
 
-}
-/*Search box */
-form.Zip input[type=text] {
-  padding: 10px;
-  font-size: 17px;
-  border: 1px solid grey;
-  float: left;
+form.Zip {
   width: 80%;
-  background: #f5f3f3;
+  float: right;
+  padding-top: 25px;
+  padding-right: 10px;
 }
-/*button for the search*/
+
 form.Zip button {
-  float: left;
-  width: 20%;
+  float: right;
   padding: 10px;
   background: #2196F3;
   color: white;
@@ -79,14 +60,18 @@ form.Zip button:hover {
   background: #0b7dda;
 }
 
+form.Zip input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: right;
+  width: 80%;
+  background: #f5f3f3;
+}
+
 form.Zip::after {
   content: "";
   clear: both;
-  display: table;
-}
-.Zip{
-  float: right;
-
 }
 /**************************************************************************/
 
@@ -100,7 +85,8 @@ form.Zip::after {
   height: 60px;
   padding: 20px 0;
   font-size: 13px;
-  padding-bottom: 30px;
+  font-weight: bold;
+  padding-bottom: 70px;
 }
 
 .main-nav ul {
@@ -113,7 +99,7 @@ form.Zip::after {
 }
 
 .main-nav ul li {
-  padding: 0 10px;
+  padding: 0px 10px;
   float: left;
 }
 
@@ -131,7 +117,7 @@ form.Zip::after {
 
 .main-nav ul.main-menu {
   flex: 1;
-  margin-left: 20px;
+  padding-left: 52px;
 }
 
 
@@ -168,7 +154,7 @@ form.Zip::after {
   font-size: 15px;;
 }
 
-/* covid testing center, news, updates */
+/* covid */
 .covid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -185,35 +171,44 @@ form.Zip::after {
 .covid h3 {
   margin-bottom: 5px;
 }
-/*--footer----*/
+/*----------------------------------------------------------------*/
 
- .foot {
+.foot {
   background-color: #333;
   overflow: hidden;
+  padding-left: 5px;
 }
 
-/* Style the links inside the navigation bar */
-.foot a {
-  float: right;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+.foot .btns {
+  width: 50%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  text-align: right;
 }
+
+.foot .footerBtn {
+  background-color: #333;
+  border: none;
+  color: #ffffff;
+  padding: 15px 5px;
+  outline: none;
+}
+
+.foot .footerBtn:hover {
+  background-color: rgb(165, 162, 162);
+}
+
 /*copyright layout*/
-.foot p{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.foot .copyright{
+  float: left;
+  width: 50%;
   color: white;
-  padding: 14px 16px;
-  font-size: 17px;
-
+  padding: 10px 10px;
 }
 
 /* Change the color of links on hover */
 .foot a:hover {
   background-color: rgb(165, 162, 162);
-
 }
