--- a/COVID_Fontend_files/front-end/main.css
+++ b/COVID_Fontend_files/front-end/main.css
@@ -4,14 +4,14 @@
   padding: 0;
 }
 
-
+/*-body wrapper--*/
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #000;
   font-size: 15px;
   line-height: 1.5;
 }
-
+/*---container for the main content area----*/
 .container {
   width: 90%;
   max-width: 1500px;
@@ -31,7 +31,7 @@ body {
    transform: none;
 }
 
-/*-------------------------------------------------------*/
+/*--------------Logo and search box layout-------------------------------------*/
 .toplogo {
   width: 100%;
   display: inline-block;
@@ -122,8 +122,7 @@ form.Zip::after {
 }
 
 
-
-/* map */
+/* map layout area  */
 .map {
   width: 100%;
   height: 400px;
@@ -172,7 +171,7 @@ form.Zip::after {
 .covid h3 {
   margin-bottom: 5px;
 }
-/*----------------------------------------------------------------*/
+/*-----------------Footer layout and  buttons for darkmode and terms--------------*/
 
 .foot {
   background-color: #333;
@@ -189,7 +188,7 @@ form.Zip::after {
   text-align: right;
 }
 
-.foot .footerBtn {
+.foot .footerBtn  {
   background-color: #333;
   border: none;
   color: #ffffff;
@@ -272,5 +271,4 @@ form.Zip::after {
 .donateOption a:hover{
   color: rgb(188, 157, 220);
 }
-
-
+/*----------------------------------------------*/
