--- a/COVID_Fontend_files/front-end/main.css
+++ b/COVID_Fontend_files/front-end/main.css
@@ -16,7 +16,8 @@ body {
   width: 90%;
   max-width: 1500px;
   margin: auto;
-}
+ }
+
 
 .skip-nav{
   position: absolute;
@@ -125,35 +126,33 @@ form.Zip::after {
 /* map layout area  */
 .map {
   width: 100%;
-  height: 400px;
+  height: 800px;
   background: url('../Img/map.image.png') no-repeat center center/cover;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   justify-content: flex-end;
-  padding-bottom: 50px;
+  padding-bottom: 600px;
   margin-bottom: 20px;
+  position: relative;
 }
 
-.map h2, .map p {
-  margin-bottom: 10px;
+/* Div for stat: deaths, total hospitalized......*/
+.statdiv{
+  display: flex;
+  background-color: rgb(193, 233, 193);
+  height: 320px;
+  width: 900px;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
 }
+.statdiv h3{
+  font-size: 25px;
+  padding-left: 10px;
 
-.map .btn {
-  margin-top: 20px;
 }
-.btn {
-  cursor: pointer;
-  display: inline-block;
-  border: 0;
-  font-weight: bold;
-  padding: 10px 20px;
-  background: #262626;
-  color: #fff;
-  font-size: 15px;;
-}
-
 /* covid */
 .covid {
   display: grid;
@@ -272,3 +271,87 @@ form.Zip::after {
   color: rgb(188, 157, 220);
 }
 /*----------------------------------------------*/
+
+
+
+/* Searchbyzipcode page CSS edits*/
+
+.pagelength {
+  margin-bottom: 32px;
+}
+
+.placeholderzip h2 {
+  position: absolute;
+  font-size: 22px;
+  top: 220px;
+  left: 380px;
+  display: inline;
+}
+
+form.searchbox {
+  position: absolute;
+  bottom: 500px;
+  left: 600px;
+  font-size: 18px;
+}
+
+form.searchbox button {
+  float: right;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+}
+
+form.searchbox button:hover {
+  background: #0b7dda;
+}
+
+form.searchbox input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: right;
+  width: 80%;
+  background: #f5f3f3;
+}
+
+form.searchbox::after {
+  content: "";
+  clear: both;
+}
+
+.placeholderzip{
+  width: 1000px;
+  border: 15px solid rgb(186, 166, 115);
+  padding: 260px;
+  margin-left: 150px;
+  background-color: rgb(152, 189, 193);
+}
+
+.infoinsidebox h4{
+  position: absolute;
+  font-size: 18px;
+  top: 450px;
+  left: 270px;
+  display: inline;
+}
+
+.infoinsidebox p{
+  position: absolute;
+  font-size: 15px;
+  top: 525px;
+  left: 270px;
+  display: inline;
+}
+
+.docimage{
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  top: 250px;
+  left: 300px;
+}
